--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -1,48 +1,48 @@
 .nav {
-    .container();
-    position       : fixed;
-    left           : 50%;
-    transform      : translate(-50%, 0);
-    z-index        : 99;
+    width     : 100%;
+    position  : fixed;
+    left      : 50%;
+    transform : translate(-50%, 0);
+    z-index   : 99;
+    background: #fff;
+}
+
+.main-nav {
+    padding        : 0;
+    font-family    : @roboto;
+    font-size      : 13px;
     display        : flex;
     justify-content: center;
     align-items    : center;
-}
 
-.logo {
-    width : 56px;
-    height: 56px;
-    margin: 0 25px;
-}
 
-.logo__img {
-    width : 100%;
-    height: 100%;
-}
+    &__item {
+        list-style-type: none;
+        margin-right   : 45px;
+        padding-bottom : -1px;
 
-.nav__before,
-.nav__after {
-    font-family: @roboto;
-    font-size  : 13px;
+        &--logo {
+            margin-bottom: -3px;
+        }
+        
+        a {
+            text-decoration: none;
+            color          : #979797;
+            cursor         : pointer;
 
-    ul {
-        padding: 0;
-
-        li {
-            list-style-type: none;
-            display: inline;
-            margin : 0 25px;
-
-            a {
-                text-decoration: none;
-                color : #979797;
-                cursor: pointer;
-
-                &:hover {
-                    color: #000;
-                }
+            &:hover {
+                color: #000;
             }
+        }
+
+        &:last-child {
+            margin-right: 0;
         }
     }
 
+    &__item--active {
+        a {
+            color: #000;
+        }
+    }
 }
