--- a/src/less/timeline.less
+++ b/src/less/timeline.less
@@ -44,23 +44,42 @@
         line-height: 1.5;
     }
 
-    &__circle {
-        width        : 26px;
-        height       : 26px;
-        border       : 5px solid #fff;
-        border-radius: 50%;
-        background   : #1d1d1d;
-        position     : absolute;
-        top          : 18px;
-        right        : -13px;
-    }
 
     &:nth-child(odd) {
         justify-content: flex-end;
         text-align     : left;
 
-        .timeline__content__circle {
+        & .circle {
             left: -13px;
+
+            &--big{
+                left: -24px;
+            }
         }
     }
+}
+
+.circle {
+    width        : 26px;
+    height       : 26px;
+    border       : 5px solid #fff;
+    border-radius: 50%;
+    background   : #1d1d1d;
+    position     : absolute;
+    top          : 18px;
+    right        : -13px;
+
+    &--big {
+        width : 47px;
+        height: 47px;
+
+        right: -24px;
+        top  : 5px;
+    }
+}
+
+.timeline__city {
+    width     : 100%;
+    height    : auto;
+    margin-top: 100px;
 }
