--- a/src/less/header.less
+++ b/src/less/header.less
@@ -24,7 +24,7 @@
     font-size  : 16px;
     font-style : italic;
     color      : @subtitle-color;
-    // margin-top: 0.8rem;
+    // margin-top: 12px;
 }
 
 .btn{
