--- a/src/less/timeline.less
+++ b/src/less/timeline.less
@@ -2,6 +2,7 @@
     width         : 100%;
     min-height    : 100vh;
     padding-top   : 100px;
+    padding-bottom: 230px;
     background    : #1d1d1d;
     position      : relative;
     display       : flex;
@@ -82,4 +83,7 @@
     width     : 100%;
     height    : auto;
     margin-top: 100px;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
 }
