--- a/src/less/header.less
+++ b/src/less/header.less
@@ -24,20 +24,5 @@
     font-size  : 16px;
     font-style : italic;
     color      : @subtitle-color;
-    // margin-top: 12px;
-}
-
-.btn{
-    font-family: @montserat;
-    font-size: 13px;
-    text-transform: uppercase;
-    
-    background: none;
-    border: 1px solid #000;
-    
-    margin-top: 50px;
-    padding: 25px 50px;
-
-    outline: none;
-    cursor: pointer;
+    margin-bottom: 50px;
 }
