--- a/src/less/index.less
+++ b/src/less/index.less
@@ -20,7 +20,7 @@ sans-serif;
 }
 
 .block-header {
-    margin-top: 80px;
+    margin: 100px 0;
     text-align: center;
 
     .block-header__title {
@@ -40,9 +40,29 @@ sans-serif;
         font-size  : 16px;
         font-style : italic;
         font-weight: 400;
-        margin-top: 5px;
+        margin-top : 5px;
 
         color: @subtitle-color;
+    }
+}
+
+.btn {
+    font-family   : @montserat;
+    font-size     : 13px;
+    text-transform: uppercase;
+
+    background: none;
+    border    : 1px solid #000;
+
+    padding   : 25px 50px;
+
+    outline: none;
+    cursor : pointer;
+
+    &--white {
+        background  : #fff;
+        border-color: #fff;
+        font-weight: 700;
     }
 }
 
@@ -51,3 +71,4 @@ sans-serif;
 @import 'timeline.less';
 @import 'team.less';
 @import 'provide.less';
+@import 'contact.less';
