--- a/src/less/provide.less
+++ b/src/less/provide.less
@@ -1,6 +1,70 @@
 .provide {
-    height: 100vh;
-    background: #181818;
-    position: relative;
+    min-height : 100vh;
+    background : #181818;
+    position   : relative;
     padding-top: 250px;
+
+    &::after {
+        content: "";
+        width     : 100%;
+        height    : 200px;
+        background : #181818;
+        position  : absolute;
+        bottom    : 0;
+        left      : 0;
+        transform: translateY(100%);
+        clip-path: polygon(0 100%, 100% 0, 0 0);
+    }
+}
+
+.services {
+    width          : 100%;
+    max-width      : 1200px;
+    margin         : 0 auto;
+    display        : flex;
+    justify-content: space-around;
+    align-items    : center;
+    flex-wrap      : wrap;
+}
+
+.services__item {
+    width      : 370px;
+    font-family: @main-font;
+    text-align : center;
+    color      : #fff;
+    padding    : 10px 20px;
+
+    &__circle {
+        display        : flex;
+        justify-content: center;
+        align-items    : center;
+        width          : 172px;
+        height         : 172px;
+        border         : 6px solid #fff;
+        border-radius  : 50%;
+        margin         : 0 auto 42px;
+
+        &__icon {
+            font-size: 54px;
+        }
+    }
+
+    &__title {
+        font-size    : 26px;
+        font-weight  : 400;
+        margin-bottom: 42px;
+    }
+
+    &__text {
+        font-size: 18px;
+        color    : #383838;
+    }
+}
+
+.btn__block {
+    width     : 100%;
+    max-width : 1200px;
+    margin    : 0px auto;
+    padding   : 95px 0;
+    text-align: center;
 }
