--- a/src/less/contact.less
+++ b/src/less/contact.less
@@ -1,4 +1,82 @@
+.block-size() {
+    width    : 100%;
+    max-width: 770px;
+    margin   : 0 auto;
+}
+
+.form-element() {
+    font-family  : @main-font;
+    display      : block;
+    width        : 100%;
+    margin-bottom: 20px;
+    text-align   : center;
+    color        : #a8a8a8;
+    border       : 1px solid #999999;
+    outline      : none;
+}
+
 .contact {
-    min-height: 100vh;
+    min-height : 100vh;
     padding-top: 250px;
+}
+
+.contact__info {
+    .block-size();
+    display        : flex;
+    justify-content: space-around;
+
+    font-family: @main-font;
+
+    &__item {
+        width     : 170px;
+        text-align: center;
+        font-size : 12px;
+        color     : @subtitle-color;
+    }
+}
+
+.contact__info__item__icon {
+    font-size    : 22px;
+    color        : #323232;
+    margin-bottom: 13px;
+}
+
+.contact-form {
+    .block-size();
+
+    margin-top: 150px;
+    margin-bottom: 100px;
+}
+
+.input {
+    .form-element();
+
+    height: 52px;
+
+    &::placeholder {
+        color: #a8a8a8;
+    }
+}
+
+.textarea {
+    .form-element();
+
+    height: 200px;
+    padding: 20px;
+    text-align: left;
+    resize: none;
+
+    &::placeholder {
+        color: #a8a8a8;
+    }
+}
+
+.copyright {
+    .block-size();
+
+    font-family: @main-font;
+    font-size: 14px;
+    text-align: center;
+    color: #3b3b3b;
+    padding: 55px;
 }
