--- a/src/less/index.less
+++ b/src/less/index.less
@@ -64,6 +64,15 @@ sans-serif;
         border-color: #fff;
         font-weight: 700;
     }
+
+    &--block {
+        display: block;
+        width: 100%;
+        height: 52px;
+        background: #161616;
+        padding: 0;
+        color: #fff;
+    }
 }
 
 @import 'header.less';
