--- a/src/less/index.less
+++ b/src/less/index.less
@@ -7,6 +7,10 @@ sans-serif;
 
 @subtitle-color: #888888;
 
+html{
+    scroll-behavior: smooth;
+}
+
 * {
     margin    : 0;
     box-sizing: border-box;
