--- a/src/less/team.less
+++ b/src/less/team.less
@@ -1,20 +1,20 @@
 .team {
-    // .container();
     position: relative;
-    height: 100vh;
+    height  : 100vh;
+    padding-top: 20px;
 
     &::before {
         content   : "";
-        display: block;
+        display   : block;
         width     : 100%;
         height    : 215px;
         background: #fff;
         position  : absolute;
         bottom    : 0;
         left      : 0;
-        z-index: 10;
-        transform: translateY(100%);
-        clip-path: polygon(0 100%, 100% 0, 0 0);
+        z-index   : 10;
+        transform : translateY(100%);
+        clip-path : polygon(0 100%, 100% 0, 0 0);
     }
 }
 
@@ -40,6 +40,14 @@
         border-radius: 50%;
         width        : 168px;
         height       : auto;
+        transform    : perspective(800px) rotateY(0deg);
+
+        transition: transform 0.5s 0.2s linear;
+
+
+        &:hover {
+            transform: perspective(800px) rotateY(180deg);
+        }
     }
 
     &__name {
